two files are modified

--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,9 @@
 <html>
 <body>
-<h1> Welcome To Excelr Software Pvt Ltd</h1>
-
+<h1 style="color:red"> Welcome To Excelr Software Pvt Ltd</h1>
+<p style="color:blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Animi error, voluptates in, sit, porro eum earum optio 
+    consequuntur voluptatibus ratione perspiciatis consequatur 
+    labore molestias exercitationem!</p>
 </body>
 </html>
